--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:22.3.0'
     implementation 'androidx.test:monitor:1.6.1'
     implementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'com.google.firebase:firebase-database:20.3.0'
 }
