--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/encuesta"
+        android:label="Encuesta"
+        android:roundIcon="@drawable/encuesta"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectMqtt">
         <activity
